--- a/examples/PF01049/README
+++ b/examples/PF01049/README
@@ -1,6 +1,6 @@
 # Created on 24/10/14 by jdutheil
 
-bppalnoptim param=AlnOptimFastml.bpp
+bppalnoptim param=AlnOptimFasttree.bpp
 bppalnoptim param=AlnOptimAuto.bpp LINKAGE=complete
 bppalnoptim param=AlnOptimAuto.bpp LINKAGE=single
 bppalnoptim param=AlnOptimAuto.bpp LINKAGE=average
@@ -9,4 +9,4 @@ bppalnoptim param=AlnOptimAuto.bpp LINKAGE=centroid
 bppalnoptim param=AlnOptimAuto.bpp LINKAGE=ward
 
 #Get a selection of sequences:
-bppalnoptim param=AlnOptimFastmlStop.bpp
+bppalnoptim param=AlnOptimFasttreeStop.bpp
