--- a/docs/physamp.texi
+++ b/docs/physamp.texi
@@ -1,18 +1,19 @@
 \input texinfo   @c -*-texinfo-*-
 @c %**start of header
 @setfilename physamp.info
-@settitle PhySamp Manual 1.0.1
+@settitle PhySamp Manual 1.0.3
 @documentencoding UTF-8
 @afourpaper
 @dircategory Science Biology Genetics
 @direntry
 * bppalnoptim: (bppalnoptim)    Alignment Optimizer.
+* bppphysamp: (bppphysamp)      Phylogenetic Sampling.
 @end direntry
 @c %**end of header
 
 
 @copying
-This is the manual of the PhySamp package, version 1.0.1.
+This is the manual of the PhySamp package, version 1.0.3.
 
 Copyright @copyright{} 2017 Julien Y. Dutheil
 @end copying
