--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+14/03/18 -*- Version 1.1.0 -*-
+
+14/03/18 Julien Dutheil
+* Compatibility update Bio++ 2.4.0.
+
 30/03/15 -*- Version 0.2.0 -*-
 
 30/03/15 Julien Dutheil
