--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,5 @@
-Julien Dutheil     <julien.dutheil@univ-montp2.fr>
+# SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
+Julien Y. Dutheil     <dutheil@evolbio.mpg.de>
