--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+# SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
+04/02/26 -*- Version 1.2.0 -*-
+
+* Compatibility update with Bio++ 3.0.0.
+
 14/03/18 -*- Version 1.1.0 -*-
 
 14/03/18 Julien Dutheil
