--- a/docs/physamp.texi
+++ b/docs/physamp.texi
@@ -1,7 +1,12 @@
 \input texinfo   @c -*-texinfo-*-
+
+@c SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
+@c
+@c SPDX-License-Identifier: CC-BY-4.0
+
 @c %**start of header
 @setfilename physamp.info
-@settitle PhySamp Manual 1.1.0
+@settitle PhySamp Manual 1.2.0
 @documentencoding UTF-8
 @afourpaper
 @dircategory Science Biology Genetics
@@ -13,7 +18,7 @@
 
 
 @copying
-This is the manual of the PhySamp package, version 1.1.0.
+This is the manual of the PhySamp package, version 1.2.0.
 
 Copyright @copyright{} 2026 Julien Y. Dutheil
 @end copying
