--- a/man/bppalnoptim.1
+++ b/man/bppalnoptim.1
@@ -1,3 +1,7 @@
+.\" SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
+.\"
+.\" SPDX-License-Identifier: CC-BY-4.0
+
 .TH BPPALNOPTIM 1 LOCAL
 
 .SH NAME
